version 1.9.12 review fork vm io